sass/account/layout.module.sass
section.box
    width: 100%
    min-height: calc( 100vh - 68px )
    height: 100%
    display: flex
    align-items: flex-start
    @media screen and (max-width: 950px)
        flex-direction: column
    & aside
        max-width: 270px
        width: 100%
        margin-top: 30px
        margin-right: 50px
        transition-duration: .2s
        display: flex
        flex-direction: column
        gap: 15px
        @media screen and (max-width: 1450px)
            max-width: 250px
        @media screen and (max-width: 950px)
            max-width: 100%
            margin: 0
        & h1
            margin: 0 12px
            margin-bottom: -10px
            font-size: 20px
            font-weight: 500
            @media screen and (max-width: 950px)
                display: none
        & ul
            width: 100%
            list-style: none
            padding: 0
            margin: 0
            @media screen and (max-width: 950px)
                &.admin
                    display: none
                &.normal
                    position: fixed
                    z-index: 999
                    padding: 10px 5px
                    width: calc( 100% - 5px * 2 )
                    bottom: 0
                    left: 0
                    display: flex
                    align-items: center
                    justify-content: space-around
                    background: var(--secondary)
            & li
                & a
                    text-decoration: none
                    color: var(--font-st)
                    font-size: 15px
                    display: block
                    border-radius: 50px
                    display: flex
                    align-items: center
                    padding: 14px 12px
                    font-weight: 500
                    transition-duration: .1s
                    gap: 5px
                    @media screen and (max-width: 950px)
                        gap: 2px
                        padding: 0
                        flex-direction: column
                        font-weight: 400
                        font-size: 12px
                        & svg
                            padding: 6px 14px
                            border-radius: 50px
                    &.active
                        background: var(--tertiary)
                        color: var(--font-nd)
                        @media screen and (max-width: 950px)
                            background: 0
                            & svg
                                background: var(--quaternary)
                    &:hover
                        color: var(--font-rd)

